--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,29 +30,10 @@ jobs:
         with:
           version: snapshot
 
-      - run: |
-          echo "$PATH"
-          echo "$GITHUB_PATH"
-          ls -alh ~/.cask/
-          pwd
-          ls -alhF
-
-      - run: PATH="$HOME/.cask/bin:$PATH"
-
-      - run: |
-          echo $PATH
-          echo $GITHUB_PATH
-          $HOME/.cask/bin/cask --version
-
-      # - uses: leotaku/elisp-check@master
-      #   with:
-      #     file: markdown-toc/markdown-toc.el
-
-      # - uses: leotaku/elisp-check@master
-      #   with:
-      #     check: ert
-      #     file: markdown-toc/tests/markdown-toc-tests.el
-
       - run: cask install
 
       - run: cask exec ert-runner
+
+      - uses: leotaku/elisp-check@master
+        with:
+          file: markdown-toc.el
